--- a/index.css
+++ b/index.css
@@ -3,12 +3,24 @@
     padding: 0;
 }
 
+h1 {
+    margintop: 0;
+}
 p {
     text-align: justify;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
 }
+
+strong {
+    font-size: 25px;
+}
+
 
 .nav {
     margin-top: 50px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 .row {
@@ -26,7 +38,7 @@ p {
     padding-left: 40px;
 }
 
-#headerB {
+.headerB {
     background: rgb(255,255,255);
 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 36%, rgba(149,149,149,1) 100%);
 }
@@ -56,3 +68,93 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
     top: 230px;
 }
 
+#projectSectionTitle {
+    position: relative;
+    right: 80px;
+    height: 400px;
+    transition: .5s ease;
+}
+
+#projectSectionTitle:hover {
+    height: 450px;
+}
+
+.capstoneImg {
+    position: relative;
+    border-radius: 50px;
+    height: 500px;
+    transition: .5s ease;
+
+}
+
+.capstoneImg:hover {
+    position: relative;
+    border-radius: 500px;
+    height: 500px;
+
+}
+
+#profileVertical {
+    border-radius: 50px;
+    height: 600px;
+    filter: grayscale(100%);
+    transition: .5s ease;
+    opacity: 1;
+}
+
+#picContainer {
+
+}
+
+#picContainer:hover #profileVertical {
+    opacity: 0.3;
+}
+
+
+.buttonPic {
+    position: absolute;
+    height: 125px;
+    width: 125px;
+}
+
+.buttonPic-sm {
+    position: absolute;
+    height: 60px;
+    width: 60px;
+}
+
+.buttonPic:hover {
+    position: absolute;
+    height: 130px;
+    width: 130px;
+}
+
+#blackButton {
+    top: 300px;
+    left: 531px;
+}
+
+#aboutMeArticle {
+    padding-right:200px;
+}
+
+.w3-green{
+    width: 50%;
+}
+
+.card {
+    width: 300px;
+    border-radius: 30px;
+    background-color: rgb(255, 255, 255,0.8);
+    
+}
+
+.card-img-top {
+    padding-top: 8px;
+    border-radius: 400px
+}
+
+.description {
+    margin-top: 80px;
+    padding: 50px;
+}
