--- a/index.css
+++ b/index.css
@@ -1,7 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
+
+.container-fluid {
+    padding-right:0;
+    padding-left:0;
+    margin: 0;
+ }
 
 h1 {
     margintop: 0;
@@ -16,6 +23,11 @@ strong {
     font-size: 25px;
 }
 
+span {
+    padding: 5px;
+    font-size:18px;
+    font-family: 'Roboto', sans-serif;
+}
 
 .nav {
     margin-top: 50px;
@@ -29,6 +41,7 @@ strong {
 
 .nav-link {
     color: white;
+    transition: .5s ease;
 }
 
 .nav-link:hover {
@@ -41,6 +54,24 @@ strong {
 .headerB {
     background: rgb(255,255,255);
 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 36%, rgba(149,149,149,1) 100%);
+}
+
+#contactMeHeader {
+
+    font-size: 80px;
+    letter-spacing: 5px;
+    font-family: 'Bebas Neue', cursive;
+}
+
+#messagehere {
+    font-size: 50px;
+    letter-spacing: 2px;
+    font-family: 'Bebas Neue', cursive;
+    transition: .5s ease;
+}
+
+#messagehere:hover {
+    font-size: 60px;
 }
 
 #nameHolder {
@@ -95,10 +126,12 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
 }
 
 #profileVertical {
+    position: relative;
+    bottom: 50px;
     border-radius: 50px;
     height: 600px;
     filter: grayscale(100%);
-    transition: .5s ease;
+    transition: 1s ease;
     opacity: 1;
 }
 
@@ -107,7 +140,9 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
 }
 
 #picContainer:hover #profileVertical {
-    opacity: 0.3;
+    filter: grayscale(0%);
+    border-radius: 500px;
+    height:700px;
 }
 
 
@@ -115,18 +150,26 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
     position: absolute;
     height: 125px;
     width: 125px;
+    transition: .5s ease;
 }
 
 .buttonPic-sm {
     position: absolute;
     height: 60px;
     width: 60px;
+    transition: .5s ease;
+}
+
+.buttonPic-sm:hover {
+    position: absolute;
+    height: 70px;
+    width: 70px;
 }
 
 .buttonPic:hover {
     position: absolute;
-    height: 130px;
-    width: 130px;
+    height: 140px;
+    width: 140px;
 }
 
 #blackButton {
@@ -146,6 +189,15 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
     width: 300px;
     border-radius: 30px;
     background-color: rgb(255, 255, 255,0.8);
+    transition: .5s ease;
+    
+}
+
+.card:hover {
+    width: 350px;
+    border-radius: 30px;
+    background-color: rgb(255, 255, 255,0.8);
+    transition: .5s ease;
     
 }
 
@@ -157,4 +209,42 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3
 .description {
     margin-top: 80px;
     padding: 50px;
+}
+
+#contactForm {
+    background: rgb(255,255,255,0.8);
+    border-radius:50px;
+}
+.form-group {
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  #nameHolder {
+    padding-top: 100px;
+    width: 300px;
+    margin-left: 10px;
+  }
+
+  #nav-1 {
+      font-size: 30px;
+      font-weight: bold;
+      font-family: 'Bebas Neue', cursive;
+      letter-spacing: 5px;
+  }
+
+  .sm-none {
+      display:none;
+  }
+
+
+
+
+
+
+
 }
